--- a/dashboard/templates/index/header.html
+++ b/dashboard/templates/index/header.html
@@ -36,7 +36,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="topNavigationBarDropDown"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user.username }}</a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="topNavigationBarDropDown">
-                            <a class="dropdown-item" href="{% url 'change_password' %}">Change Password</a>
+                            <a class="dropdown-item" href="{% url 'dashboard' %}">Dashboard</a>
                             <a class="dropdown-item" href="{% url 'logout_receiver' %}">Logout</a>
                         </div>
                     </li>
