--- a/course/templates/course/course_detail.html
+++ b/course/templates/course/course_detail.html
@@ -10,6 +10,7 @@
     <title>uicCourse | {{course_data.course_name_en}}</title>
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <style type="text/css">
         /* Sticky footer styles
@@ -98,7 +99,52 @@
         </div>
     </div>
     <div class="col-md-4">
-    Rating Part, Will add later
+        <div class="card" style="margin-bottom: 1rem!important;">
+            <div class="card-header">
+                <h4 class="card-text text-center">Overall Score</h4>
+            </div>
+            <div class="card-body">
+                <p class="card-text text-center text-dark" style="font-size: 5rem"><span
+                        id="current_score">{{course_vote_status.score|floatformat:1}}</span>/<span
+                        class="h2 text-secondary">10</span></p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-text text-center">Quick Vote</h4>
+            </div>
+            <div class="card-body mx-auto">
+                <div class="btn-group btn-group-lg" role="group" aria-label="Basic example">
+                    {% if user_vote.vote_status == 0 %}
+                        <button class="btn btn-outline-success" id="upvote_btn">
+                            <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+                            {{course_vote_status.upvote}}
+                        </button>
+                        <button class="btn btn-outline-danger" id="downvote_btn">
+                            <i class="fa fa-thumbs-down" aria-hidden="true"></i>
+                        </button>
+                    {% else %}
+                        {% if user_vote.vote_status == 1 %}
+                            <button class="btn btn-outline-success" id="upvote_btn">
+                                <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+                                {{course_vote_status.upvote}}
+                            </button>
+                            <button class="btn btn-outline-danger" id="downvote_btn">
+                                <i class="fa fa-thumbs-o-down" aria-hidden="true"></i>
+                            </button>
+                        {% else %}
+                            <button class="btn btn-outline-success" id="upvote_btn">
+                                <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+                                {{course_vote_status.upvote}}
+                            </button>
+                            <button class="btn btn-outline-danger" id="downvote_btn">
+                                <i class="fa fa-thumbs-o-down" aria-hidden="true"></i>
+                            </button>
+                        {% endif %}
+                    {% endif %}
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <div>
@@ -111,5 +157,59 @@
 </div>
 </main>
 {% include "course/footer.html" %}
+<script src="https://cdn.bootcss.com/limonte-sweetalert2/7.11.0/sweetalert2.all.min.js"></script>
+<script>
+    var voted = 0;
+    $("#upvote_btn").click(function () {
+        if (!voted) {
+            $.ajax({
+                url: '{% url 'vote_course' course_data.id %}',
+                data: {
+                    'vote_action': 'upvote'
+                },
+                dataType: 'json',
+                success: function (data) {
+                    if (data.is_success) {
+                        console.log(data.new_upvote)
+                        $("#upvote_btn").html("<i class=\"fa fa-thumbs-up\" aria-hidden=\"true\"></i>\n" + (parseInt(data.new_upvote)));
+                        $("#downvote_btn").html("<i class=\"fa fa-thumbs-o-down\" aria-hidden=\"true\"></i>\n");
+                        voted = 1;
+                        $("#current_score").html(data.current_score.toFixed(1));
+                        swal(
+                            'Voted!',
+                            'You have successfully given this class an up vote.',
+                            'success'
+                        )
+                    }
+                }
+            });
+        }
+    });
+    $("#downvote_btn").click(function () {
+        if (!voted) {
+            $.ajax({
+                url: '{% url 'vote_course' course_data.id %}',
+                data: {
+                    'vote_action': 'downvote'
+                },
+                dataType: 'json',
+                success: function (data) {
+                    if (data.is_success) {
+                        console.log(data.new_upvote)
+                        $("#upvote_btn").html("<i class=\"fa fa-thumbs-o-up\" aria-hidden=\"true\"></i>\n" + (parseInt(data.new_upvote)));
+                        $("#downvote_btn").html("<i class=\"fa fa-thumbs-down\" aria-hidden=\"true\"></i>\n");
+                        voted = 1;
+                        $("#current_score").html(data.current_score.toFixed(1));
+                        swal(
+                            'Voted!',
+                            'You have successfully given this class a down vote.',
+                            'success'
+                        )
+                    }
+                }
+            });
+        }
+    });
+</script>
 </body>
 </html>
