add delete course method

--- a/course/templates/course/course_detail.html
+++ b/course/templates/course/course_detail.html
@@ -151,7 +151,7 @@
 {% if user.is_staff or user.is_superuser %}
 <nav class="py-2 border-top border-bottom">
     <a href="{% url 'course_modify' course_data.id %}" class="btn btn-primary btn-sm my-1">Modify</a>
-    <a href="#" class="btn btn-danger btn-sm my-1 disabled">Delete(Unavailable)</a>
+    <button onclick="AlertIt()" class="btn btn-danger btn-sm my-1">Delete</button>
 </nav>
 {% endif %}
 </div>
@@ -159,6 +159,12 @@
 {% include "course/footer.html" %}
 <script src="https://cdn.bootcss.com/limonte-sweetalert2/7.11.0/sweetalert2.all.min.js"></script>
 <script>
+    function AlertIt() {
+        var answer = confirm("Are you sure you want to delete this course record?");
+        if (answer) {
+            window.location = "{% url 'course_delete' course_data.id %}"
+        }
+    }
     var voted = 0;
     $("#upvote_btn").click(function () {
         if (!voted) {
