change delete alert style

--- a/course/templates/course/course_detail.html
+++ b/course/templates/course/course_detail.html
@@ -160,10 +160,19 @@
 <script src="https://cdn.bootcss.com/limonte-sweetalert2/7.11.0/sweetalert2.all.min.js"></script>
 <script>
     function AlertIt() {
-        var answer = confirm("Are you sure you want to delete this course record?");
-        if (answer) {
-            window.location = "{% url 'course_delete' course_data.id %}"
-        }
+        swal({
+        title: 'Are you sure you want to delete this course record?',
+        text: "You won't be able to revert this!",
+        type: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes, delete it!'
+        }).then((result) => {
+            if (result.value) {
+                window.location = "{% url 'course_delete' course_data.id %}"
+            }
+        })
     }
     var voted = 0;
     $("#upvote_btn").click(function () {
