--- a/dashboard/templates/dashboard/functions.html
+++ b/dashboard/templates/dashboard/functions.html
@@ -3,4 +3,5 @@
     <a href="{% url 'change_password' %}" class="btn btn-secondary btn-sm my-1">Change Password</a>
     <a href="{% url 'major_division' %}" class="btn btn-warning btn-sm my-1">Major & Division</a>
     <a href="{% url 'course_type' %}" class="btn btn-warning btn-sm my-1">Course Type</a>
+    <a href="{% url 'tags_page' %}" class="btn btn-success btn-sm my-1">Tags</a>
 </nav>
