change button color

--- a/dashboard/templates/dashboard/tags.html
+++ b/dashboard/templates/dashboard/tags.html
@@ -75,7 +75,7 @@
                                 {% endif %}
                             {% endif %}
                         </td>
-                        <td><a href="{% url 'tags_modify' tag.id %}" class="btn btn-sm btn-primary">Edit</a></td>
+                        <td><a href="{% url 'tags_modify' tag.id %}" class="btn btn-sm btn-warning">Edit</a></td>
                     </tr>
                     {% endfor %}
                 {% else %}
