finish dashboard user part

--- a/dashboard/templates/dashboard/functions.html
+++ b/dashboard/templates/dashboard/functions.html
@@ -1,5 +1,7 @@
 <nav class="py-2">
     <a href="{% url 'dashboard' %}" class="btn btn-primary btn-sm my-1">Homepage</a>
+    <a href="{% url 'profile_page' %}" class="btn btn-secondary btn-sm my-1">Profile</a>
+    <a href="{% url 'profile_change' %}" class="btn btn-secondary btn-sm my-1">Change Profile</a>
     <a href="{% url 'change_password' %}" class="btn btn-secondary btn-sm my-1">Change Password</a>
     <a href="{% url 'major_division' %}" class="btn btn-warning btn-sm my-1">Major & Division</a>
     <a href="{% url 'course_type' %}" class="btn btn-warning btn-sm my-1">Course Type</a>
