add dashboard access control

--- a/dashboard/templates/dashboard/functions.html
+++ b/dashboard/templates/dashboard/functions.html
@@ -3,7 +3,9 @@
     <a href="{% url 'profile_page' %}" class="btn btn-secondary btn-sm my-1">Profile</a>
     <a href="{% url 'profile_change' %}" class="btn btn-secondary btn-sm my-1">Change Profile</a>
     <a href="{% url 'change_password' %}" class="btn btn-secondary btn-sm my-1">Change Password</a>
+    {% if user.is_superuser or user.is_staff %}
     <a href="{% url 'major_division' %}" class="btn btn-warning btn-sm my-1">Major & Division</a>
     <a href="{% url 'course_type' %}" class="btn btn-warning btn-sm my-1">Course Type</a>
     <a href="{% url 'tags_page' %}" class="btn btn-success btn-sm my-1">Tags</a>
+    {% endif %}
 </nav>
