add title for dashboard function

--- a/dashboard/templates/dashboard/tag_create.html
+++ b/dashboard/templates/dashboard/tag_create.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
-    <title>uicCourse | Dashboard</title>
+    <title>uicCourse | Create/Modify Tag</title>
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -36,7 +36,7 @@
 {% include "index/messager.html" %}
 <main role="main" class="container mb-5">
     <div class="d-flex justify-content-between align-items-center">
-        <h1 class="mt-md-3">Create/Modify New Tag</h1>
+        <h1 class="mt-md-3">Create/Modify Tag</h1>
     </div>
     {% include "dashboard/functions.html" %}
     <form method="post">
