--- a/dashboard/templates/auth/login.html
+++ b/dashboard/templates/auth/login.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
-    <title>uicCourse | login</title>
+    <title>uicCourse | Login</title>
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
