--- a/dashboard/templates/index/index.html
+++ b/dashboard/templates/index/index.html
@@ -39,21 +39,21 @@
     <p>All information is collected from the Internet (AR's Website), for reference only.</p>
     <div class="card-deck mt-md-5">
         <div class="card">
-            <img class="card-img-top" src="https://source.unsplash.com/random/601x450" alt="Card image cap">
+            <img class="card-img-top" src="https://source.unsplash.com/random/601x450" alt="Course Information">
             <div class="card-body">
                 <h5 class="card-title">Course Information</h5>
                 <p class="card-text">Well-organized data and beautiful display</p>
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="https://source.unsplash.com/random/602x450" alt="Card image cap">
+            <img class="card-img-top" src="https://source.unsplash.com/random/602x450" alt="Rate Course">
             <div class="card-body">
                 <h5 class="card-title">Rate Course</h5>
                 <p class="card-text">If you have taken this course, you can rate this course and provide references for other students.</p>
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="https://source.unsplash.com/random/603x450" alt="Card image cap">
+            <img class="card-img-top" src="https://source.unsplash.com/random/603x450" alt="View Report">
             <div class="card-body">
                 <h5 class="card-title">View Report</h5>
                 <p class="card-text">We will analyze and provide reports based on the data we have obtained.</p>
