--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -59,6 +59,33 @@
         </div>
     </div>
     {% endif %}
+    <div>
+        <nav>
+            <ul class="pagination justify-content-center">
+                {% if courses.has_previous %}
+                <li class="page-item">
+                <a class="page-link" href="?page={{ courses.previous_page_number }}" aria-label="Previous">
+                <span aria_hidden="true">&laquo;</span></a>
+                </li>
+                {% endif %}
+
+                {% for page_num in courses.paginator.page_range %}
+                    {% if page_num == courses.number %}
+                 <li class="page-item active"><a class="page-link" href="?page={{ page_num }}">Page {{ page_num }} of {{ courses.paginator.num_pages }}</a> </li>
+                    {% else %}
+                 <li class="page-item"><a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a> </li>
+                    {% endif %}
+                {% endfor %}
+
+                {% if courses.has_next %}
+                 <li class="page-item">
+                      <a class="page-link" href="?page={{ courses.next_page_number }}" aria-label="Next">
+                          <span aria_hidden="true">&raquo;</span></a>
+                </li>
+              {% endif %}
+            </ul>
+        </nav>
+    </div>
 </main>
 {% include "course/footer.html" %}
 </body>
