--- a/dashboard/templates/dashboard/functions.html
+++ b/dashboard/templates/dashboard/functions.html
@@ -7,5 +7,6 @@
     <a href="{% url 'major_division' %}" class="btn btn-warning btn-sm my-1">Major & Division</a>
     <a href="{% url 'course_type' %}" class="btn btn-warning btn-sm my-1">Course Type</a>
     <a href="{% url 'tags_page' %}" class="btn btn-success btn-sm my-1">Tags</a>
+    <a href="{% url 'notice_page' %}" class="btn btn-info btn-sm my-1">Notice</a>
     {% endif %}
 </nav>
