--- a/dashboard/templates/dashboard/notice_create.html
+++ b/dashboard/templates/dashboard/notice_create.html
@@ -58,7 +58,7 @@
         <button type="submit" class="btn btn-primary mb-5">Submit</button>
     </form>
     {% if is_modify %}
-        <button onclick="AlertIt()" class="btn btn-danger mb-5">Delete the tag</button>
+        <button onclick="AlertIt()" class="btn btn-danger mb-5">Delete the notice</button>
     {% endif %}
 </main>
 {% include "index/footer.html" %}
