--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -62,7 +62,7 @@
         </div>
     </div>
     {% endif %}
-    <div>
+    <div style="margin-bottom: 5rem;">
         <nav>
             <ul class="pagination justify-content-center">
                 {% if courses.has_previous %}
@@ -72,13 +72,7 @@
                 </li>
                 {% endif %}
 
-                {% for page_num in courses.paginator.page_range %}
-                    {% if page_num == courses.number %}
-                 <li class="page-item active"><a class="page-link" href="?page={{ page_num }}">Page {{ page_num }} of {{ courses.paginator.num_pages }}</a> </li>
-                    {% else %}
-                 <li class="page-item"><a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a> </li>
-                    {% endif %}
-                {% endfor %}
+                 <li class="page-item active"><a class="page-link" href="?page={{ page_num }}">Page {{ courses.number }} of {{ courses.paginator.num_pages }}</a> </li>
 
                 {% if courses.has_next %}
                  <li class="page-item">
