--- a/dashboard/templates/dashboard/functions.html
+++ b/dashboard/templates/dashboard/functions.html
@@ -1,5 +1,8 @@
 <nav class="py-2">
     <a href="{% url 'dashboard' %}" class="btn btn-primary btn-sm my-1">Homepage</a>
+    {% if user.is_superuser or user.is_staff %}
+    <a href="/admin" class="btn btn-primary btn-sm my-1">Django Administration</a>
+    {% endif %}
     <a href="{% url 'profile_page' %}" class="btn btn-secondary btn-sm my-1">Profile</a>
     <a href="{% url 'profile_change' %}" class="btn btn-secondary btn-sm my-1">Change Profile</a>
     <a href="{% url 'change_password' %}" class="btn btn-secondary btn-sm my-1">Change Password</a>
